AG-24993: fixed cut of arrow
Merge in EXTENSIONS/vpn-extension from fix/AG-24993 to master

Squashed commit of the following:

commit 8bc2fa0a39eba1b39ab645734d4bffd7f8aac8fb
Author: Dmitriy Seregin <d.seregin@adguard.com>
Date:   Thu Aug 17 19:36:53 2023 +0400

    AG-24993: fixed cut of arrow

--- a/src/popup/components/Settings/CurrentEndpoint/endpoint.pcss
+++ b/src/popup/components/Settings/CurrentEndpoint/endpoint.pcss
@@ -25,9 +25,9 @@
 
     &__ping-container {
         display: flex;
-        
+
         .icon--arrow {
-            margin: 5px 0 0 25px;
+            margin-left: 16px;
         }
     }
 
