--- a/src/popup/components/ui/icon.pcss
+++ b/src/popup/components/ui/icon.pcss
@@ -28,9 +28,10 @@
     &--cross {
         color: var(--gray88);
     }
-    
+
     &--arrow {
-        width: 8px;
-        height: 14px;
+        width: 24px;
+        height: 24px;
+        padding: 4px 6px;
     }
 }
